# exS3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/GUI/: CMakeLists.txt
components/GUI/app/page/: ctrl_page.c  info_page.c  main_page.c
components/GUI/app/widgets/: notify_bar.c  notify_bar.h
components/GUI/port/: lv_port_disp.c  lv_port_indev.c  lv_port_indev.h  lv_task.c  lv_task.h
components/axp173/: axp173.c  axp173.h  axp173_cm.h
components/bus/: CMakeLists.txt  i2c_bus.c  i2c_bus.h  i2c_mid.c  i2c_mid.h  spi_bus.c  spi_bus.h
components/exS3/: CMakeLists.txt  exS3_conf.h
components/exS3/bus/: i2c_bus.c  i2c_bus.h  spi_bus.c  spi_bus.h
components/exS3/button/: button.c
components/exS3/encoder/: ecd.c  ecd.h  encoder.c  encoder.h  rot_enc.c
components/exS3/iodev/: led.c  led.h  motor.c  motor.h
components/exS3/lcd/: lcd_bl.c  lcd_bl.h  st7789.c  st7789.h
components/exS3/network/: exS3_sntp.c  exS3_sntp.h  exS3_wifi.c  exS3_wifi.h
components/exS3/power/: axp173.c  axp173.h  axp173_def.h
components/exS3/touch/: ft6236.c  ft6236.h  ft6236_def.h
components/lvgl_drivers/: CMakeLists.txt
components/lvgl_drivers/tft/: st7789.c  st7789.h
components/lvgl_drivers/touch/: ft6236.c  ft6236.h
main/: main.c
